--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -105,6 +105,7 @@ compose-material3 = "androidx.compose.material3:material3:1.0.0-beta02"
 compose-activity = "androidx.activity:activity-compose:1.5.1"
 compose-navigation = "androidx.navigation:navigation-compose:2.5.2"
 compose-navigation-animation = "com.google.accompanist:accompanist-navigation-animation:0.25.1"
+compose-snapper = "dev.chrisbanes.snapper:snapper:0.3.0"
 
 # For these dependencies we only use the version but declare full artifacts so renovate can update the version
 compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose-compiler" }
