--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     tools:node="remove" />
 
   <application
+    android:enableOnBackInvokedCallback="true"
     android:name=".injection.App"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
