--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,17 @@
 android.uniquePackageNames=true
 android.useAndroidX=true
+#android.nonTransitiveRClass=true
+android.defaults.buildfeatures.aidl=false
+android.defaults.buildfeatures.buildconfig=false
+android.defaults.buildfeatures.renderscript=false
+android.defaults.buildfeatures.resvalues=false
+android.defaults.buildfeatures.shaders=false
+android.defaults.buildfeatures.viewbinding=false
+android.library.defaults.buildfeatures.androidresources=false
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.unsafe.configuration-cache=true
 # https://youtrack.jetbrains.com/issue/KT-38576
 kotlin.incremental.usePreciseJavaTracking=false
 voice.signing.play=false
+android.nonTransitiveRClass=true
