--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ materialDialog = "3.3.0"
 dagger = "2.45"
 kotlin = "1.8.10"
 compose-compiler = "1.4.4"
+compose-material3 = "1.1.0-beta01"
 media3 = "1.0.0"
 agp = "7.4.2"
 ktlint = "0.48.2"
@@ -98,8 +99,8 @@ compose-material-icons-core = { module = "androidx.compose.material:material-ico
 compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 compose-animation-graphics = { module = "androidx.compose.animation:animation-graphics" }
 compose-animation-animation = { module = "androidx.compose.animation:animation" }
-compose-material3 = { module = "androidx.compose.material3:material3" }
-compose-windowsize = { module = "androidx.compose.material3:material3-window-size-class" }
+compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
+compose-windowsize = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "compose-material3" }
 compose-activity = "androidx.activity:activity-compose:1.7.0"
 compose-navigation = "androidx.navigation:navigation-compose:2.5.3"
 compose-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
@@ -117,7 +118,6 @@ compose = [
   "compose-foundation",
   "compose-navigation",
   "compose-windowsize",
-  "compose-material-core",
   "compose-material-icons-core",
   "compose-material-icons-extended",
   "compose-animation-graphics",
