Inline the search into the book overview screen.

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.unsafe.configuration-cache=true
 voice.signing.play=false
+kotlin.daemon.useFallbackStrategy=false
