--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -84,6 +84,8 @@ dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = 
 
 media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3" }
 media3-session = { module = "androidx.media3:media3-session", version.ref = "media3" }
+media3-testUtils-core = { module = "androidx.media3:media3-test-utils", version.ref = "media3" }
+media3-testUtils-robolectric = { module = "androidx.media3:media3-test-utils-robolectric", version.ref = "media3" }
 
 compose-bom = "androidx.compose:compose-bom:2023.04.00"
 compose-ui-ui = { module = "androidx.compose.ui:ui" }
