--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
+      - name: Set up JDK
+        uses: actions/setup-java@v3.11.0
+        with:
+          distribution: 'zulu'
+          java-version: 19
+
       - run: ./gradlew testDebugUnitTest
       - run: ./gradlew lintKotlin
       - run: ./gradlew app:lintDebug
@@ -48,6 +54,12 @@ jobs:
       GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
     steps:
       - uses: actions/checkout@v3
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3.11.0
+        with:
+          distribution: 'zulu'
+          java-version: 19
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
