--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+pagingCompose = "1.0.0-alpha18"
 versionCode = "3603012"
 versionName = "7.0.7"
 
@@ -17,14 +18,19 @@ compose-material3 = "1.1.0-rc01"
 media3 = "1.0.1"
 agp = "8.0.0"
 ktlint = "0.48.2"
+retrofit = "2.9.0"
 
 [libraries]
 androidPluginForGradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 material = "com.google.android.material:material:1.8.0"
-materialCab = "com.afollestad:material-cab:2.0.1"
 ffmpeg = "com.arthenica:ffmpeg-kit-audio:5.1"
 junit = "junit:junit:4.13.2"
 mockk = "io.mockk:mockk:1.13.5"
+paging-runtime = "androidx.paging:paging-runtime-ktx:3.1.1"
+paging-compose = "androidx.paging:paging-compose:1.0.0-alpha18"
+retrofit-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofit" }
+retrofit-kotlinx = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0"
 robolectric = "org.robolectric:robolectric:4.10"
 coil = "io.coil-kt:coil-compose:2.3.0"
 appCompat = "androidx.appcompat:appcompat:1.6.1"
@@ -133,6 +139,13 @@ testing-jvm = [
   "mockk",
   "koTest-assert",
   "turbine",
+  "junit"
+]
+
+retrofit = [
+  "retrofit-core",
+  "retrofit-scalars",
+  "retrofit-kotlinx"
 ]
 
 [plugins]
