--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,4 +77,5 @@ jobs:
       - name: Github Release
         uses: softprops/action-gh-release@v1
         with:
+          generate_release_notes: true
           files: app/build/outputs/apk/release/app-release.apk
