--- a/renovate.json
+++ b/renovate.json
@@ -18,7 +18,7 @@
     {
       "groupName": "Kotlin, Compose, KSP",
       "matchPackagePrefixes": [
-        "org.jetbrains.compose:compiler",
+        "androidx.compose.compiler:compiler",
         "org.jetbrains.kotlin",
         "com.google.devtools.ksp"
       ]
