--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -112,7 +112,7 @@ compose-navigation = "dev.olshevski.navigation:reimagined:1.4.0"
 # For these dependencies we only use the version but declare full artifacts so renovate can update the version
 compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose-compiler" }
 ktlint = { module = "com.pinterest.ktlint:ktlint-core", version.ref = "ktlint" }
-compose-ktlint = "com.twitter.compose.rules:ktlint:0.0.26"
+compose-ktlint = "io.nlopez.compose.rules:ktlint:0.1.5"
 
 [bundles]
 compose = [
