Update media3 and implement onPlaybackResumption

--- a/playback/src/main/AndroidManifest.xml
+++ b/playback/src/main/AndroidManifest.xml
@@ -4,14 +4,11 @@
   <application>
 
     <receiver
-      android:name="voice.playback.receiver.MediaButtonReceiver"
+      android:name="androidx.media3.session.MediaButtonReceiver"
       android:exported="true">
-
       <intent-filter>
         <action android:name="android.intent.action.MEDIA_BUTTON" />
-        <action android:name="voice.WidgetAction" />
       </intent-filter>
-
     </receiver>
 
   </application>
