--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
       <intent-filter>
         <action android:name="androidx.media3.session.MediaLibraryService" />
         <action android:name="android.media.browse.MediaBrowserService" />
+        <action android:name="android.intent.action.MEDIA_BUTTON" />
       </intent-filter>
     </service>
 
