--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ materialDialog = "3.3.0"
 dagger = "2.46.1"
 kotlin = "1.8.21"
 compose-compiler = "1.4.7"
-media3 = "1.0.2"
+media3 = "1.1.0-rc01"
 agp = "8.0.2"
 ktlint = "0.49.1"
 retrofit = "2.9.0"
