Create a dedicated widget receiver.

--- a/playback/src/main/AndroidManifest.xml
+++ b/playback/src/main/AndroidManifest.xml
@@ -11,6 +11,16 @@
       </intent-filter>
     </receiver>
 
+    <receiver
+      android:name="voice.playback.receiver.WidgetButtonReceiver"
+      android:exported="false">
+
+      <intent-filter>
+        <action android:name="voice.WidgetAction" />
+      </intent-filter>
+
+    </receiver>
+
   </application>
 
 </manifest>
