Enable org.gradle.kotlin.dsl.allWarningsAsErrors

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ org.gradle.parallel=true
 org.gradle.unsafe.configuration-cache=true
 voice.signing.play=false
 kotlin.daemon.useFallbackStrategy=false
+org.gradle.kotlin.dsl.allWarningsAsErrors=true
