--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -60,8 +60,10 @@ coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", 
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
-firebase-crashlytics = "com.google.firebase:firebase-crashlytics-ktx:18.3.7"
-firebase-analytics = "com.google.firebase:firebase-analytics-ktx:21.3.0"
+firebase-bom = "com.google.firebase:firebase-bom:32.1.1"
+firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics-ktx" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics-ktx" }
+firebase-remoteconfig = { module = "com.google.firebase:firebase-config-ktx" }
 
 serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
 
