Control using proprietary libraries using an ENV flag.

--- a/.github/workflows/voice.yml
+++ b/.github/workflows/voice.yml
@@ -18,6 +18,7 @@ env:
   SIGNING_KEYSTORE_GITHUB: ${{ secrets.SIGNING_KEYSTORE_GITHUB }}
   SIGNING_PROPERTIES_GITHUB: ${{ secrets.SIGNING_PROPERTIES_GITHUB }}
   GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
+  VOICE_USE_PROPRIETARY_LIBRARIES: "true"
 
 jobs:
   test:
