--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,8 @@ kotlin = "1.8.22"
 compose-compiler = "1.4.8"
 media3 = "1.1.0"
 agp = "8.0.2"
-ktlint = "0.49.1"
+ktlint-core = "0.50.0"
+ktlint-gradlePlugin = "11.5.0"
 retrofit = "2.9.0"
 
 [libraries]
@@ -117,10 +118,10 @@ compose-material3 = { module = "androidx.compose.material3:material3" }
 compose-activity = "androidx.activity:activity-compose:1.7.2"
 compose-navigation = "dev.olshevski.navigation:reimagined:1.4.0"
 
-# For these dependencies we only use the version but declare full artifacts so renovate can update the version
 compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "compose-compiler" }
-ktlint = { module = "com.pinterest.ktlint:ktlint-core", version.ref = "ktlint" }
-compose-ktlint = "io.nlopez.compose.rules:ktlint:0.1.11"
+ktlint-core = { module = "com.pinterest.ktlint:ktlint-core", version.ref = "ktlint-core" }
+ktlint-gradlePlugin = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "ktlint-gradlePlugin" }
+ktlint-compose = "io.nlopez.compose.rules:ktlint:0.1.12"
 
 [bundles]
 compose = [
@@ -161,7 +162,7 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 anvil = { id = "com.squareup.anvil", version = "2.4.6" }
-ktlint = { id = "org.jmailen.kotlinter", version = "3.15.0" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint-gradlePlugin" }
 ksp = { id = "com.google.devtools.ksp", version = "1.8.22-1.0.11" }
 crashlytics = { id = "com.google.firebase.crashlytics", version = "2.9.6" }
 googleServices = { id = "com.google.gms.google-services", version = "4.3.15" }
