--- a/playback/src/main/AndroidManifest.xml
+++ b/playback/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:tools="http://schemas.android.com/tools"
+  xmlns:android="http://schemas.android.com/apk/res/android">
 
   <application>
 
@@ -11,9 +12,11 @@
       </intent-filter>
     </receiver>
 
+    <!-- exported to be used with tasker -->
     <receiver
       android:name="voice.playback.receiver.WidgetButtonReceiver"
-      android:exported="false">
+      android:exported="true"
+      tools:ignore="ExportedReceiver">
 
       <intent-filter>
         <action android:name="voice.WidgetAction" />
