Add jitpack to the renovate maven urls

--- a/renovate.json
+++ b/renovate.json
@@ -29,6 +29,17 @@
         "io.nlopez.compose.rules",
         "io.github.usefulness"
       ]
+    },
+    {
+      "matchDatasources": [
+        "maven"
+      ],
+      "registryUrls": [
+        "https://jitpack.io/"
+      ],
+      "matchPackagePrefixes": [
+        "com.github.PaulWoitaschek"
+      ]
     }
   ],
   "prHourlyLimit": 0,
