Enable receiving MEDIA_BUTTON intent
It makes the play button in the notification continue playing when the app is closed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,14 @@
         android:resource="@xml/widget_info" />
     </receiver>
 
+    <receiver
+      android:name="androidx.media3.session.MediaButtonReceiver"
+      android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.MEDIA_BUTTON" />
+      </intent-filter>
+    </receiver>
+
     <provider
       android:name="androidx.core.content.FileProvider"
       android:authorities="${applicationId}.coverprovider"
