[export] add export line

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ org.gradle.unsafe.configuration-cache=true
 voice.signing.play=false
 kotlin.daemon.useFallbackStrategy=false
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
+org.gradle.jvmargs=-Xmx2g
