--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -56,6 +56,7 @@ okhttp = "com.squareup.okhttp3:okhttp:4.12.0"
 review = "com.google.android.play:review-ktx:2.0.1"
 lottie = "com.airbnb.android:lottie-compose:6.3.0"
 clikt = "com.github.ajalt.clikt:clikt:4.2.2"
+csv = "com.github.doyaaaaaken:kotlin-csv-jvm:1.9.3"
 
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "coroutines" }
