--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,7 +32,7 @@ paging-runtime = "androidx.paging:paging-runtime-ktx:3.2.1"
 paging-compose = "androidx.paging:paging-compose:3.2.1"
 retrofit-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofit" }
-retrofit-kotlinx = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0"
+retrofit-serialization = { module = "com.squareup.retrofit2:converter-kotlinx-serialization", version.ref = "retrofit" }
 robolectric = "org.robolectric:robolectric:4.11.1"
 coil = "io.coil-kt:coil-compose:2.6.0"
 appCompat = "androidx.appcompat:appcompat:1.6.1"
@@ -155,7 +155,7 @@ testing-jvm = [
 retrofit = [
   "retrofit-core",
   "retrofit-scalars",
-  "retrofit-kotlinx"
+  "retrofit-serialization"
 ]
 
 [plugins]
