--- a/.github/workflows/voice.yml
+++ b/.github/workflows/voice.yml
@@ -63,7 +63,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
 
       - name: Set up JDK
         uses: actions/setup-java@v4.2.1
@@ -78,13 +78,18 @@ jobs:
         run: ./ci_signing_setup.sh
 
       - name: Publish to Google Play
-        run: ./gradlew app:publishReleaseBundle -Pvoice.signing.play=true
+        run: ./gradlew :app:publishPlayProprietaryReleaseBundle
 
-      - name: Build Github APK
-        run: ./gradlew app:assembleRelease -Pvoice.signing.play=false
+      - name: Build Github Proprietary APK
+        run: ./gradlew :app:assembleGithubProprietaryRelease
+
+      - name: Build Github Proprietary APK
+        run: ./gradlew :app:assembleGithubLibreRelease
 
       - name: Github Release
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
-          files: app/build/outputs/apk/release/app-release.apk
+          files: |
+            app/build/outputs/apk/githubProprietary/release/app-github-proprietary-release.apk
+            app/build/outputs/apk/githubLibre/release/app-github-libre-release.apk
