Downgrade review-ktx to 2.0.1 and remove obsolete proguard rules.
Due to https://issuetracker.google.com/issues/374691245

--- a/renovate.json
+++ b/renovate.json
@@ -49,6 +49,12 @@
         "digest"
       ],
       "automerge": true
+    },
+    {
+      "matchPackageNames": [
+        "com.google.android.play"
+      ],
+      "allowedVersions": "/^(?!2\\.0\\.2$).+/"
     }
   ],
   "prHourlyLimit": 0,
