Don't update to dagger 2.56 and 2.56.1

--- a/renovate.json
+++ b/renovate.json
@@ -55,6 +55,13 @@
         "com.google.android.play"
       ],
       "allowedVersions": "/^(?!2\\.0\\.2$).+/"
+    },
+    {
+      "matchPackageNames": [
+        "com.google.dagger:dagger",
+        "com.google.dagger:dagger-compiler"
+      ],
+      "allowedVersions": "/^(?!2\\.56(?:\\.1)?$).+/"
     }
   ],
   "prHourlyLimit": 0,
