Fix the renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -54,14 +54,14 @@
       "matchPackageNames": [
         "com.google.android.play"
       ],
-      "allowedVersions": "/^(?!2\\.0\\.2$).+/"
+      "allowedVersions": "!/^(2\\.0\\.2)$/"
     },
     {
       "matchPackageNames": [
         "com.google.dagger:dagger",
         "com.google.dagger:dagger-compiler"
       ],
-      "allowedVersions": "/^(?!2\\.56(?:\\.1)?$).+/"
+      "allowedVersions": "!/^(2\\.56|2\\.56\\.1)$/"
     }
   ],
   "prHourlyLimit": 0,
