Add the symlinked markdown files to the pages path

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -7,6 +7,9 @@ on:
     paths:
       - 'docs/**'
       - mkdocs.yml
+      - CONTRIBUTING.md
+      - PRIVACY.md
+      - LICENSE.md
 
 permissions:
   contents: write
