Rename the privacy policy because google play had an outdated DNS entry
Which lead to a violation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ repo_name: "Voice on GitHub"
 
 nav:
   - Home: index.md
-  - Privacy Policy: privacy.md
+  - Privacy Policy: privacy_policy.md
   - License: license.md
   - Contributing: contributing.md
   - About: about.md
