Use pipenv for the pages. Dash- name the privacy policies. Add redirects.

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,7 +27,10 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install MkDocs
-        run: pip install mkdocs-material
+      - name: Install Pipenv
+        run: pip install pipenv
+
+      - name: Install Dependencies
+        run: pipenv install
 
       - run: mkdocs gh-deploy --force --strict
