--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Install Dependencies
         run: pipenv install
 
-      - run: mkdocs gh-deploy --force --strict
+      - run: pipenv run mkdocs gh-deploy --force --strict
