Add the pages themselves as a build trigger

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -11,6 +11,7 @@ on:
       - PRIVACY.md
       - LICENSE.md
       - Pipfile
+      - .github/workflows/pages.yml
 
 permissions:
   contents: write
