--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -109,7 +109,8 @@ compose-animation-graphics = { module = "androidx.compose.animation:animation-gr
 compose-animation-animation = { module = "androidx.compose.animation:animation" }
 compose-material3 = { module = "androidx.compose.material3:material3" }
 compose-activity = "androidx.activity:activity-compose:1.10.1"
-compose-navigation = "dev.olshevski.navigation:reimagined:1.5.0"
+compose-navigation = "androidx.navigation:navigation-compose:2.8.9"
+compose-typedNavigation = "com.kiwi.navigation-compose.typed:core:0.10.0"
 
 ktlint-core = { module = "com.pinterest.ktlint:ktlint-cli", version.ref = "ktlint-core" }
 ktlint-gradlePlugin = { module = "io.github.usefulness:ktlint-gradle-plugin", version.ref = "ktlint-gradlePlugin" }
@@ -128,6 +129,7 @@ compose = [
   "androidxCore",
   "compose-material3",
   "compose-activity",
+  "compose-typedNavigation",
   "coil",
 ]
 
