--- a/.github/workflows/voice.yml
+++ b/.github/workflows/voice.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Github Release
         uses: softprops/action-gh-release@v2
         with:
-          generate_release_notes: true
+          draft: true
           files: |
             app/build/outputs/apk/githubProprietary/release/app-github-proprietary-release.apk
             app/build/outputs/apk/githubLibre/release/app-github-libre-release.apk
