--- a/.github/workflows/voice.yml
+++ b/.github/workflows/voice.yml
@@ -58,9 +58,15 @@ jobs:
 
   instrumentation_test:
     if: github.event_name == 'push' || github.event_name == 'pull_request'
-    runs-on: macos-15
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
