--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Project Site
+name: Build Website
 
 on:
   push:
@@ -35,4 +35,4 @@ jobs:
       - name: Install Dependencies
         run: pipenv install
 
-      - run: pipenv run mkdocs gh-deploy --force --strict
+      - run: pipenv run mkdocs build --strict
