--- a/.github/workflows/voice.yml
+++ b/.github/workflows/voice.yml
@@ -105,9 +105,54 @@ jobs:
         with:
           report_paths: '**/test-results/**/TEST-*.xml'
 
-  release:
+  build_release:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     timeout-minutes: 60
+    runs-on: ubuntu-latest
+    outputs:
+      tag_name: ${{ github.ref_name }}
+    steps:
+      - uses: actions/checkout@09d2acae674a48949e3602304ab46fd20ae0c42f
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4.7.1
+        with:
+          distribution: 'zulu'
+          java-version: 17
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Setup Signing
+        run: ./ci_signing_setup.sh
+
+      - name: Build Google Play AAB
+        run: ./gradlew :app:bundlePlayProprietaryRelease -Pvoice.warningsAsErrors=true
+
+      - name: Build Github Proprietary APK
+        run: ./gradlew :app:assembleGithubProprietaryRelease -Pvoice.warningsAsErrors=true
+
+      - name: Build Github Libre APK
+        run: ./gradlew :app:assembleGithubLibreRelease -Pvoice.warningsAsErrors=true
+
+      - name: Upload AAB artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: google-play-aab
+          path: app/build/outputs/bundle/playProprietaryRelease/app-play-proprietary-release.aab
+          retention-days: 30
+
+      - name: Github Release
+        uses: softprops/action-gh-release@v2
+        with:
+          draft: true
+          files: |
+            app/build/outputs/apk/githubProprietary/release/app-github-proprietary-release.apk
+            app/build/outputs/apk/githubLibre/release/app-github-libre-release.apk
+
+  publish_google_play:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    needs: build_release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@09d2acae674a48949e3602304ab46fd20ae0c42f
@@ -119,24 +164,16 @@ jobs:
           java-version: 17
 
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v3
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Setup Signing
         run: ./ci_signing_setup.sh
 
-      - name: Publish to Google Play
-        run: ./gradlew :app:publishPlayProprietaryReleaseBundle -Pvoice.warningsAsErrors=true
-
-      - name: Build Github Proprietary APK
-        run: ./gradlew :app:assembleGithubProprietaryRelease -Pvoice.warningsAsErrors=true
-
-      - name: Build Github Proprietary APK
-        run: ./gradlew :app:assembleGithubLibreRelease -Pvoice.warningsAsErrors=true
-
-      - name: Github Release
-        uses: softprops/action-gh-release@v2
+      - name: Download AAB artifact
+        uses: actions/download-artifact@v4
         with:
-          draft: true
-          files: |
-            app/build/outputs/apk/githubProprietary/release/app-github-proprietary-release.apk
-            app/build/outputs/apk/githubLibre/release/app-github-libre-release.apk
+          name: google-play-aab
+          path: app/build/outputs/bundle/playProprietaryRelease/
+
+      - name: Publish to Google Play
+        run: ./gradlew publishBundle --artifact-dir app/build/outputs/bundle/playProprietaryRelease/ -Pvoice.warningsAsErrors=true
