--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ org.gradle.configuration-cache=true
 kotlin.daemon.useFallbackStrategy=false
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
 voice.warningsAsErrors=false
+voice.enableCrashlytics=false
