--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ org.gradle.parallel=true
 org.gradle.configuration-cache=true
 kotlin.daemon.useFallbackStrategy=false
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
-voice.warningsAsErrors=false
-voice.enableCrashlytics=false
+voice.warningsAsErrors=true
+voice.includeProprietaryLibraries=true
