--- a/.github/workflows/voice.yml
+++ b/.github/workflows/voice.yml
@@ -40,7 +40,7 @@ jobs:
         run: ./ci_signing_setup.sh
 
       - name: Test
-        run: ./gradlew voiceUnitTest  lintKotlin :app:lintPlayProprietaryDebug :app:assemblePlayProprietaryDebug :scripts:build
+        run: ./gradlew voiceUnitTest  lintKotlin :app:lintPlayDebug :app:assemblePlayDebug :scripts:build
 
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         if: always()
@@ -130,7 +130,7 @@ jobs:
         run: mkdir -p outputs
 
       - name: Build Google Play AAB
-        run: ./gradlew :app:bundlePlayProprietaryRelease
+        run: ./gradlew :app:bundlePlayRelease
 
       - name: Build Github Proprietary APK
         run: ./gradlew :app:assembleGithubRelease
@@ -148,7 +148,7 @@ jobs:
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: google-play-aab
-          path: app/build/outputs/bundle/playProprietaryRelease/app-play-proprietary-release.aab
+          path: app/build/outputs/bundle/playRelease/app-play-release.aab
           retention-days: 30
 
       - name: Github Release
@@ -182,7 +182,7 @@ jobs:
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4
         with:
           name: google-play-aab
-          path: app/build/outputs/bundle/playProprietaryRelease/
+          path: app/build/outputs/bundle/playRelease/
 
       - name: Publish to Google Play
-        run: ./gradlew publishBundle --artifact-dir app/build/outputs/bundle/playProprietaryRelease/
+        run: ./gradlew publishBundle --artifact-dir app/build/outputs/bundle/playRelease/
