--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     android:enableOnBackInvokedCallback="true"
     android:name=".injection.App"
     android:icon="@drawable/ic_launcher"
+    android:appCategory="audio"
     android:label="@string/app_name"
     android:supportsRtl="true"
     android:theme="@style/AppTheme"
