--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -87,6 +87,7 @@ media3-testUtils-core = { module = "androidx.media3:media3-test-utils", version.
 media3-testUtils-robolectric = { module = "androidx.media3:media3-test-utils-robolectric", version.ref = "media3" }
 
 lifecycle = "androidx.lifecycle:lifecycle-runtime-ktx:2.9.2"
+lifecycle-viewmodel-compose = "androidx.lifecycle:lifecycle-viewmodel-compose:2.9.2"
 
 compose-bom = "androidx.compose:compose-bom:2025.08.00"
 compose-ui-ui = { module = "androidx.compose.ui:ui" }
@@ -103,8 +104,9 @@ compose-animation-graphics = { module = "androidx.compose.animation:animation-gr
 compose-animation-animation = { module = "androidx.compose.animation:animation" }
 compose-material3 = { module = "androidx.compose.material3:material3" }
 compose-activity = "androidx.activity:activity-compose:1.10.1"
-compose-navigation = "androidx.navigation:navigation-compose:2.9.3"
-compose-typedNavigation = "com.kiwi.navigation-compose.typed:core:0.10.0"
+navigation3-ui = "androidx.navigation3:navigation3-ui:1.0.0-alpha07"
+navigation3-runtime = "androidx.navigation3:navigation3-runtime:1.0.0-alpha07"
+
 
 ktlint-core = { module = "com.pinterest.ktlint:ktlint-cli", version.ref = "ktlint-core" }
 ktlint-gradlePlugin = { module = "io.github.usefulness:ktlint-gradle-plugin", version.ref = "ktlint-gradlePlugin" }
@@ -115,7 +117,6 @@ compose = [
   "compose-ui-ui",
   "compose-ui-tooling-preview",
   "compose-foundation",
-  "compose-navigation",
   "compose-material-icons-core",
   "compose-material-icons-extended",
   "compose-animation-graphics",
@@ -123,7 +124,6 @@ compose = [
   "androidxCore",
   "compose-material3",
   "compose-activity",
-  "compose-typedNavigation",
   "coil",
 ]
 
