--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ agp = "8.12.1"
 ktlint-core = "1.7.1"
 ktlint-gradlePlugin = "0.11.0"
 retrofit = "3.0.0"
+metro = "0.6.3"
 
 [libraries]
 androidPluginForGradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
@@ -104,6 +105,7 @@ compose-activity = "androidx.activity:activity-compose:1.10.1"
 navigation3-ui = "androidx.navigation3:navigation3-ui:1.0.0-alpha07"
 navigation3-runtime = "androidx.navigation3:navigation3-runtime:1.0.0-alpha07"
 
+metro-runtime = { module = "dev.zacsweers.metro:runtime", version.ref = "metro" }
 
 ktlint-core = { module = "com.pinterest.ktlint:ktlint-cli", version.ref = "ktlint-core" }
 ktlint-gradlePlugin = { module = "io.github.usefulness:ktlint-gradle-plugin", version.ref = "ktlint-gradlePlugin" }
@@ -154,4 +156,4 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 ksp = { id = "com.google.devtools.ksp", version = "2.2.10-2.0.2" }
 ktlint = { id = "io.github.usefulness.ktlint-gradle-plugin", version.ref = "ktlint-gradlePlugin" }
 playPublish = { id = "com.github.triplet.play", version = "3.12.1" }
-metro = { id = "dev.zacsweers.metro", version = "0.6.3" }
+metro = { id = "dev.zacsweers.metro", version.ref = "metro" }
