--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -1,28 +1,52 @@
-name: Deploy Website
+name: Build and Deploy Pages
 
 on:
+  push:
+    branches: [main]
+    paths:
+      - 'docs/**'
+      - mkdocs.yml
+      - CONTRIBUTING.md
+      - PRIVACY.md
+      - LICENSE.md
+      - Pipfile
   workflow_dispatch:
+    inputs:
+      deploy:
+        description: 'Deploy to GitHub Pages'
+        type: boolean
+        default: true
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  deploy-pages:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
-
-      - name: Setup Python
-        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+      - run: pip install pipenv
+      - run: pipenv sync --dev
+      - run: pipenv run mkdocs build --strict
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: site/
 
-      - name: Install Pipenv
-        run: pip install pipenv
-
-      - name: Install Dependencies
-        run: pipenv install
-
-      - run: pipenv run mkdocs gh-deploy --force --strict
+  deploy:
+    if: github.event_name == 'push' || inputs.deploy != 'false'
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: github-pages
+    steps:
+      - uses: actions/deploy-pages@v4
+        id: deployment
