Add pipenv install

--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -2,7 +2,7 @@ name: Build and Deploy Pages
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
     paths:
       - 'docs/**'
       - mkdocs.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           python-version: '3.x'
       - run: pip install pipenv
+      - run: pipenv install
       - run: pipenv run mkdocs build --strict
       - uses: actions/upload-pages-artifact@7b1f4a764d45c48632c6b24a0339c27f5614fb0b # v4
         with:
