Move the checkout out of the actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
     outputs:
       tag: ${{ github.ref_name }}
     steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - uses: ./.github/actions/build_setup
       - name: Setup Signing
         run: ./ci_signing_setup.sh
@@ -55,6 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: google-play
     steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - uses: ./.github/actions/build_setup
       - name: Setup Signing
         run: ./ci_signing_setup.sh
