--- a/.github/actions/build_setup/action.yml
+++ b/.github/actions/build_setup/action.yml
@@ -8,6 +8,7 @@ runs:
         distribution: zulu
         java-version: 17
     - name: Boostrap Gradle Memory
+      shell: bash
       run: ./scripts/bootstrap.sh
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@017a9effdb900e5b5b2fddfb590a105619dca3c3 # v4
