--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,16 @@ jobs:
       - uses: ./.github/actions/build_setup
       - name: Run Unit Tests + Lint
         run: ./gradlew :app:lintPlayDebug
-      - uses: ./.github/actions/test_reporting
+      - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
+        if: always()
+        with:
+          name: lint-report
+          path: app/build/reports/**/*.html
+      - name: Publish JUnit Report
+        uses: mikepenz/action-junit-report@3585e9575db828022551b4231f165eb59a0e74e3 # v5
+        if: always()
+        with:
+          report_paths: '**/test-results/**/TEST-*.xml'
   unit:
     runs-on: ubuntu-latest
     timeout-minutes: 30
@@ -24,7 +33,16 @@ jobs:
       - uses: ./.github/actions/build_setup
       - name: Run Unit Tests + Lint
         run: ./gradlew voiceUnitTest lintKotlin :scripts:build :app:assemblePlayDebug
-      - uses: ./.github/actions/test_reporting
+      - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
+        if: always()
+        with:
+          name: reports
+          path: app/build/reports/**/*.html
+      - name: Publish JUnit Report
+        uses: mikepenz/action-junit-report@3585e9575db828022551b4231f165eb59a0e74e3 # v5
+        if: always()
+        with:
+          report_paths: '**/test-results/**/TEST-*.xml'
   instrumentation:
     runs-on: ubuntu-latest
     timeout-minutes: 60
@@ -42,4 +60,13 @@ jobs:
         run: ./gradlew voiceDeviceSetup -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
       - name: Run Instrumentation Tests
         run: ./gradlew voiceDeviceGithubDebugAndroidTest -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
-      - uses: ./.github/actions/test_reporting
+      - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
+        if: always()
+        with:
+          name: reports
+          path: app/build/reports/**/*.html
+      - name: Publish JUnit Report
+        uses: mikepenz/action-junit-report@3585e9575db828022551b4231f165eb59a0e74e3 # v5
+        if: always()
+        with:
+          report_paths: '**/test-results/**/TEST-*.xml'
